{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 697,
  "lineage": "8e6540f0-5970-9e20-a77b-833424174571",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alt-school-assignment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:loadbalancer/app/tf-lb-20230203030440398900000002/12aca1fc0c000104",
            "arn_suffix": "app/tf-lb-20230203030440398900000002/12aca1fc0c000104",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230203030440398900000002-1111247004.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:171380375694:loadbalancer/app/tf-lb-20230203030440398900000002/12aca1fc0c000104",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230203030440398900000002",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01357ab191dce81f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0306b8ee4b08899cc"
              },
              {
                "subnet_id": "subnet-0be17bf95891eec58"
              }
            ],
            "subnets": [
              "subnet-0306b8ee4b08899cc",
              "subnet-0be17bf95891eec58"
            ],
            "vpc_id": "vpc-03a6cc2ee4d6622e3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.my_subnet_1",
            "aws_subnet.my_subnet_2",
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:listener/app/tf-lb-20230203030440398900000002/12aca1fc0c000104/b71d2a20a7b5fb37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:171380375694:listener/app/tf-lb-20230203030440398900000002/12aca1fc0c000104/b71d2a20a7b5fb37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:loadbalancer/app/tf-lb-20230203030440398900000002/12aca1fc0c000104",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alt-school-assignment",
            "aws_alb_target_group.my_alb",
            "aws_security_group.elb_sg",
            "aws_subnet.my_subnet_1",
            "aws_subnet.my_subnet_2",
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c",
            "arn_suffix": "targetgroup/my-alb/875afc6da4884d6c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "dependencies": [
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "aws_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c-20230203030517117000000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c",
            "target_id": "i-023e71ee8bf0db16f"
          },
          "dependencies": [
            "aws_alb_target_group.my_alb",
            "aws_instance.ec2-instance",
            "aws_security_group.elb_sg",
            "aws_security_group.ssh-access",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c-20230203030517451000000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c",
            "target_id": "i-010ac0dc3d11ea852"
          },
          "dependencies": [
            "aws_alb_target_group.my_alb",
            "aws_instance.ec2-instance",
            "aws_security_group.elb_sg",
            "aws_security_group.ssh-access",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c-20230203030516763600000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:171380375694:targetgroup/my-alb/875afc6da4884d6c",
            "target_id": "i-0247085961d4c9aec"
          },
          "dependencies": [
            "aws_alb_target_group.my_alb",
            "aws_instance.ec2-instance",
            "aws_security_group.elb_sg",
            "aws_security_group.ssh-access",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:171380375694:instance/i-023e71ee8bf0db16f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023e71ee8bf0db16f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f8d4b418b6162aa",
            "private_dns": "ip-10-0-2-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.248",
            "public_ip": "3.92.176.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07cbae091a471995d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be17bf95891eec58",
            "tags": {
              "Name": "web-server-0"
            },
            "tags_all": {
              "Name": "web-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01357ab191dce81f4",
              "sg-0c5820b8d8f2c391b"
            ]
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_security_group.ssh-access",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:171380375694:instance/i-010ac0dc3d11ea852",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010ac0dc3d11ea852",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f69a4136d396071",
            "private_dns": "ip-10-0-2-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.64",
            "public_ip": "44.211.37.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b5e38402a774df6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be17bf95891eec58",
            "tags": {
              "Name": "web-server-1"
            },
            "tags_all": {
              "Name": "web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01357ab191dce81f4",
              "sg-0c5820b8d8f2c391b"
            ]
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_security_group.ssh-access",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:171380375694:instance/i-0247085961d4c9aec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0247085961d4c9aec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d3cbb2c25dc87af",
            "private_dns": "ip-10-0-2-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.175",
            "public_ip": "44.202.239.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d350aa268d1184b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be17bf95891eec58",
            "tags": {
              "Name": "web-server-2"
            },
            "tags_all": {
              "Name": "web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01357ab191dce81f4",
              "sg-0c5820b8d8f2c391b"
            ]
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_security_group.ssh-access",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:internet-gateway/igw-04247d314ffdfe8ca",
            "id": "igw-04247d314ffdfe8ca",
            "owner_id": "171380375694",
            "tags": {
              "Name": "My Internet Gateway"
            },
            "tags_all": {
              "Name": "My Internet Gateway"
            },
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "dependencies": [
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:route-table/rtb-09333b3e34ec8373e",
            "id": "rtb-09333b3e34ec8373e",
            "owner_id": "171380375694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04247d314ffdfe8ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My Route Table"
            },
            "tags_all": {
              "Name": "My Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065b67900048a1618",
            "route_table_id": "rtb-09333b3e34ec8373e",
            "subnet_id": "subnet-0be17bf95891eec58"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.my_subnet_1",
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:security-group/sg-01357ab191dce81f4",
            "description": "lb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01357ab191dce81f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "171380375694",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "altschoolAssignment-el-sg"
            },
            "tags_all": {
              "Name": "altschoolAssignment-el-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:security-group/sg-0c5820b8d8f2c391b",
            "description": "Allow port 22 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5820b8d8f2c391b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_access",
            "name_prefix": "",
            "owner_id": "171380375694",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "altschoolAssignment-sg"
            },
            "tags_all": {
              "Name": "altschoolAssignment-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:subnet/subnet-0be17bf95891eec58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be17bf95891eec58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "171380375694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "dependencies": [
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:subnet/subnet-0306b8ee4b08899cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0306b8ee4b08899cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "171380375694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03a6cc2ee4d6622e3"
          },
          "dependencies": [
            "aws_vpc.my_assignment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_assignment_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:171380375694:vpc/vpc-03a6cc2ee4d6622e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c65d5ae9429867e0",
            "default_route_table_id": "rtb-01ef7ae82207e5194",
            "default_security_group_id": "sg-0fad6956f9d7f5bcb",
            "dhcp_options_id": "dopt-0c9aede1ac9c61ec6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a6cc2ee4d6622e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ef7ae82207e5194",
            "owner_id": "171380375694",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}